--- a/_sass/components/_recipe-list.scss
+++ b/_sass/components/_recipe-list.scss
@@ -30,6 +30,12 @@
       padding: 1.25em 0 .875em 0;
       border-bottom: 1px solid lighten($color-brand-primary, 60%);
     }
+
+    @include responsive(40.063em) {
+      h3 {
+        line-height: 1.1;
+      }
+    }
 }
 
 .description {
